# ProjectHermes

./: .claude-followup-323.md  .claude-followup-444.md  .claude-followup-447.md  .claude-followup-460.md  .claude-followup-464.md  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .spectral.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  codecov.yml  coverage.xml  docker-compose.yml  justfile  openapi.json  pixi.toml  pyproject.toml  requirements.lock.txt  ruff.toml
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  tech_debt.md
.github/workflows/: _required.yml  ci.yml  docker-build.yml  label-sync.yml  publish.yml  security.yml  tech-debt-discovery.yml
.github/workflows/scripts/: build-tags.sh  test-build-tags.sh
docs/: security.md
docs/adr/: ADR-001-nats-reconnect-strategy.md  ADR-002-dead-letter-strategy.md  ADR-003-schema-version-field.md  ADR-004-slsa-build-provenance.md  README.md
scripts/: README.md  check-changelog.py  check-no-bare-crypto-in-tests.py  check-no-latest-tags.sh  check-workflow-timeouts.sh  check_coverage_floors.py  check_dep_sync.py  discover-tech-debt.sh  export-openapi.py  register-webhooks.sh  smoke-readonly-fs.sh  sync_requirements.py  verify-secret-scan.sh
src/hermes/: __init__.py  __main__.py  config.py  logging_config.py  metrics.py  middleware.py  models.py  publisher.py  rate_limit.py  registrar.py  server.py
tests/: conftest.py  helpers.py  test_check_coverage_floors.py  test_check_dep_sync.py  test_config.py  test_connect_timeout_integration.py  test_dead_letter_limits.py  test_discover_tech_debt.py  test_docker_build_ci.py  test_docker_compose.py  test_dockerfile.py  test_events_endpoint.py  test_inflight.py  test_inflight_concurrent.py  test_inflight_metric.py  test_integration.py  test_integration_coverage.py  test_lifespan.py  test_logging_config.py  test_main.py  test_metrics.py  test_models.py  test_nats_restart_integration.py  test_no_bare_crypto_lint.py  test_packaging.py  test_publisher.py  test_publisher_callbacks.py  test_publisher_reconnect.py  test_publisher_reconnect_backoff.py  test_publisher_reconnect_thundering_herd.py  test_rate_limit.py  test_request_id_context.py  test_shutdown.py  test_startup_banner.py  test_subjects_rate_limit.py  test_tech_debt_workflow_gating.py  test_timeouts.py  test_tls_config.py  test_version.py  test_webhook.py  (+3 more)
tests/unit/: test_openapi_spec.py  test_requirements_lock.py
