[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes"
version = "0.1.0"
description = "Lightweight service bridging external webhooks to NATS JetStream"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# pixi.toml [pypi-dependencies] is the authoritative source — keep these ranges in sync.
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "nats-py>=2.14.0,<3",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.14.0,<3",
    "httpx>=0.27,<1",
    "slowapi>=0.1.9,<1",
    "limits>=3.0,<4",
    "prometheus-client>=0.25.0,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hermes"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "--cov=hermes",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "integration: requires a running NATS server",
]

[tool.coverage.run]
source = ["hermes"]

[tool.coverage.report]
fail_under = 80
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "def __repr__",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
# Tests use pytest decorators (untyped), pydantic runtime coercion, MagicMock
# attributes, and pydantic-settings private kwargs — suppress these false positives.
ignore_errors = true

[[tool.mypy.overrides]]
module = ["hermes.server", "hermes.middleware"]
# FastAPI/starlette route and BaseHTTPMiddleware decorators have untyped stubs,
# producing unavoidable [misc] false positives. Suppress strict mode for these files.
warn_unused_ignores = false
ignore_errors = true

[[tool.mypy.overrides]]
module = ["nats.*", "nats.aio.*", "nats.js.*"]
ignore_missing_imports = true
