[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes"
version = "0.1.0"
description = "Lightweight service bridging external webhooks to NATS JetStream"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# pixi.toml [pypi-dependencies] is the authoritative source — keep these ranges in sync.
# scripts/check_dep_sync.py enforces parity between this list and pixi.toml in CI.
dependencies = [
    "fastapi>=0.136.1,<1",
    # Pin starlette>=1.0.1 — starlette 1.0.0 had a BaseHTTPMiddleware regression
    # that raised `RuntimeError: Response content longer than Content-Length` when
    # streaming-response wrapper re-emitted a body with Content-Length already set.
    # Fixed in 1.0.1. See readonly-fs-smoke failure on main, GH run 25840464800.
    # Further bumped to >=1.3.1 to remediate PYSEC-2026-248 (fix 1.3.0) and
    # PYSEC-2026-249 (fix 1.3.1), flagged by pip-audit / security/dependency-scan.
    "starlette>=1.3.1,<2",
    "uvicorn[standard]>=0.47.0,<1",
    "nats-py>=2.15.0,<3",
    "pydantic>=2.13.4,<3",
    # Bumped to >=2.14.2 to remediate GHSA-4xgf-cpjx-pc3j (pip-audit).
    "pydantic-settings>=2.14.2,<3",
    "httpx>=0.28.1,<1",
    "slowapi>=0.1.9,<1",
    "limits>=5.8.0,<6",
    "prometheus-client>=0.20,<1",
    # Pinned to remediate CVE-2026-44431 / CVE-2026-44432 (transitive via cachecontrol/requests).
    "urllib3>=2.7.0,<3",
    # Pinned to remediate GHSA-6v7p-g79w-8964 (transitive via cachecontrol, the
    # same chain as urllib3 above). Fixed in 1.2.1. Flagged by security/dependency-scan.
    "msgpack>=1.2.1,<2",
]

# Mirror of pixi.toml [feature.dev.pypi-dependencies] so pip-based workflows
# (e.g. `pip install -e .[dev]`) get the same dev toolchain as pixi users.
# Keep ranges in sync with pixi.toml.
[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.0,<2",
    "pytest-cov>=5.0,<7",
    "ruff>=0.11,<1",
    "mypy>=1.10,<2",
    "pip-audit>=2.7,<3",
    "pip>=26.1,<27",
    "pre-commit>=3.0,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hermes"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "--cov=hermes",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "integration: requires a running NATS server",
]

[tool.coverage.run]
source = ["hermes"]

[tool.coverage.report]
fail_under = 80
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "def __repr__",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
# Tests use pytest decorators (untyped), pydantic runtime coercion, MagicMock
# attributes, and pydantic-settings private kwargs — suppress these false positives.
ignore_errors = true

[[tool.mypy.overrides]]
module = ["hermes.server", "hermes.middleware"]
# FastAPI/starlette route and BaseHTTPMiddleware decorators have untyped stubs,
# producing unavoidable [misc] false positives. Suppress strict mode for these files.
warn_unused_ignores = false
ignore_errors = true

[[tool.mypy.overrides]]
module = ["nats.*", "nats.aio.*", "nats.js.*"]
ignore_missing_imports = true
